; ModuleID = '/home/carl/AnghaBench/systemd/src/timesync/extr_timesyncd-bus.c_ntp_ts_short_to_usec.c'
source_filename = "/home/carl/AnghaBench/systemd/src/timesync/extr_timesyncd-bus.c_ntp_ts_short_to_usec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ntp_ts_short = type { i32, i32 }

@USEC_PER_SEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ntp_ts_short*)* @ntp_ts_short_to_usec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ntp_ts_short_to_usec(%struct.ntp_ts_short* %0) #0 {
  %2 = alloca %struct.ntp_ts_short*, align 8
  store %struct.ntp_ts_short* %0, %struct.ntp_ts_short** %2, align 8
  %3 = load %struct.ntp_ts_short*, %struct.ntp_ts_short** %2, align 8
  %4 = getelementptr inbounds %struct.ntp_ts_short, %struct.ntp_ts_short* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @be16toh(i32 %5)
  %7 = load i32, i32* @USEC_PER_SEC, align 4
  %8 = mul nsw i32 %6, %7
  %9 = load %struct.ntp_ts_short*, %struct.ntp_ts_short** %2, align 8
  %10 = getelementptr inbounds %struct.ntp_ts_short, %struct.ntp_ts_short* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @be16toh(i32 %11)
  %13 = load i32, i32* @USEC_PER_SEC, align 4
  %14 = mul nsw i32 %12, %13
  %15 = sdiv i32 %14, 65536
  %16 = add nsw i32 %8, %15
  ret i32 %16
}

declare dso_local i32 @be16toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
